deployment/lanchonete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lanchonete
  labels:
    app: lanchonete
spec:
  template:
    metadata:
      name: lanchonete
      labels:
        app: lanchonete
    spec:
      containers:
        - name: lanchonete
          image: vwnunes/tech-challenge-61:1.7
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /lanchonete-volume
              name: lanchonete-volume
      volumes:
        - name: lanchonete-volume
          hostPath:
            path: /home/lanchonete-volume
            type: DirectoryOrCreate
  replicas: 2
  selector:
    matchLabels:
      app: lanchonete
