deployment/lanchonete-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lanchonete-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: lanchonete
